# orm-generator

./: .gitignore  CMakeLists.txt  README.md
include/: Parser.h  StringMap.h
include/data/: DConfig.h  DOrmField.h  DOrmModel.h
src/: Parser.cpp  main.cpp
src/data/: DConfig.cpp  DOrmField.cpp  DOrmModel.cpp
